--- a/app/src/main/res/layout/activity_home_.xml
+++ b/app/src/main/res/layout/activity_home_.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     tools:context=".Home_Activity">
 
+    <SearchView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:queryHint="cari nama"
+        android:iconifiedByDefault="false"
+        android:id="@+id/searchbar"/>
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
@@ -20,5 +28,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@color/devider"
-        android:dividerHeight="1dp" />
+        android:dividerHeight="20dp" />
 </LinearLayout>
